--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
          <li>You need to work on your pecs.</li>
 </ul>
 <img src=https://media.okmagazine.com/brand-img/o9OEbDvxC/0x0/joebiden6-pp-1696617931409.jpg>
+
+<p>CS:GO tutorial:</p>
+<iframe width="1280" height="720" src="https://www.youtube.com/embed/QoTPvOEMDEg" title="Counter-Strike: Global Offensive briefly summarized" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+
+
  
 </body>
 </html>
