--- a/index.html
+++ b/index.html
@@ -18,8 +18,21 @@
 <p>CS:GO tutorial:</p>
 <iframe width="1280" height="720" src="https://www.youtube.com/embed/QoTPvOEMDEg" title="Counter-Strike: Global Offensive briefly summarized" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
+<title>Minu lemmik lennukid</title>
+<table border="1">
+   <caption>Minu lemmik lennukid</caption>
+   <tbody><tr>
+    <th>Riik</th>
+    <th>USA</th>
+    <th>Venemaa</th>
+   </tr>
+   <tr><td>2020</td><td><a href=https://www.youtube.com/watch?v=V4HYvL_PmAs>F-22 Raptor.</a></td><td>MIG-29</td></tr>
+   <tr><td>2021</td><td>F-35 Lightning II</td><td>SU-35</td></tr>
+   <tr><td>2023</td><td>P-51 Mustang</td><td>SU-27</td></tr>
+   <tr><td>2024</td><td>B-52 Stratofortress</td><td>SU-57</td></tr>
+  </tbody></table>
 
-
+ 
  
 </body>
 </html>
