--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <th>USA</th>
     <th>Venemaa</th>
    </tr>
-   <tr><td>2020</td><td><a href=https://www.youtube.com/watch?v=V4HYvL_PmAs>F-22 Raptor.</a></td><td>MIG-29</td></tr>
+   <tr><td>2020</td><td><a href="https://www.youtube.com/watch?v=V4HYvL_PmAs">F-22 Raptor.</a></td><td>MIG-29</td></tr>
    <tr><td>2021</td><td>F-35 Lightning II</td><td>SU-35</td></tr>
    <tr><td>2023</td><td>P-51 Mustang</td><td>SU-27</td></tr>
    <tr><td>2024</td><td>B-52 Stratofortress</td><td>SU-57</td></tr>
