--- a/index.html
+++ b/index.html
@@ -24,15 +24,15 @@
    <tbody><tr>
     <th>Riik</th>
     <th>USA</th>
-    <th>Venemaa</th>
+    <th>Teised riigid</th>
    </tr>
-   <tr><td>2020</td><td><a href="https://www.youtube.com/watch?v=V4HYvL_PmAs">F-22 Raptor.</a></td><td>MIG-29</td></tr>
-   <tr><td>2021</td><td>F-35 Lightning II</td><td>SU-35</td></tr>
-   <tr><td>2023</td><td>P-51 Mustang</td><td>SU-27</td></tr>
-   <tr><td>2024</td><td>B-52 Stratofortress</td><td>SU-57</td></tr>
+   <tr><td>2020</td><td><a href="https://www.youtube.com/watch?v=V4HYvL_PmAs">F-22 Raptor.</a></td><td>Spitfire</td></tr>
+   <tr><td>2021</td><td>F-22 Raptor</td><td>Raffael</td></tr>
+   <tr><td>2023</td><td>F-22 Raptor</td><td>Mirage</td></tr>
+   <tr><td>2024</td><td>F-22 Raptor</td><td>F-35 Lightnng II(jaapan versioon)</td></tr>
   </tbody></table>
 
- 
+ <p><a href="https://perg.ee/">Siin ma õpin.</a></p>
  
 </body>
 </html>
