--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
  <head>
-  <title>My page</title>
+  <title> I hate Warthunder </title>
  </head>
 <body style="background-color:powderblue;">
 
